--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -20,8 +20,12 @@ if (DEFLATE_TEST_SUPPORT__DO_NOT_USE)
   list(APPEND TEST_PROGRAMS_DEFINITIONS TEST_SUPPORT__DO_NOT_USE)
 endif()
 
+if (BUILD_SHARED_LIBS)
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif()
+
 # Small library for common code
-add_library(programs STATIC)
+add_library(programs)
 target_sources(programs PRIVATE prog_util.c test_util.c tgetopt.c)
 target_compile_definitions(programs PRIVATE ${TEST_PROGRAMS_DEFINITIONS})
 target_link_libraries(programs deflate)
