--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ jobs:
       before_install:
       - sudo apt-get install -y libz-dev valgrind
       - curl -O https://cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz
-      - tar zxvf cmake-3.5.1.tar.gz
+      - tar zxvf cmake-3.5.1-Linux-x86_64.tar.gz
       - sudo cp cmake-3.5.1-Linux-x86_64/bin/cmake /usr/bin/cmake
       script: scripts/run_tests.sh
