--- a/programs/config.h.in
+++ b/programs/config.h.in
@@ -20,4 +20,9 @@
 /* Does stat() provide nanosecond-precision timestamps? */
 #cmakedefine HAVE_STAT_NANOSECOND_PRECISION
 
+/* Nonstandard field names used by macOS */
+#cmakedefine st_atim st_atimensec
+#cmakedefine st_mtim st_mtimensec
+#cmakedefine st_ctim st_ctimensec
+
 #endif /* CONFIG_H */
