--- a/.travis.yml
+++ b/.travis.yml
@@ -24,20 +24,10 @@ jobs:
     - dist: precise
       compiler: gcc
       arch: amd64
-      before_install:
-      # Ubuntu precise cmake (2.8.7) is too old, we need cmake 3.5+
-      - curl -O https://cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz
-      - tar zxvf cmake-3.5.1-Linux-x86_64.tar.gz
-      - sudo cp -rf cmake-3.5.1-Linux-x86_64/* /usr/
 
     - dist: precise
       compiler: clang
       arch: amd64
-      # Ubuntu precise cmake (2.8.7) is too old, we need cmake 3.5+
-      before_install:
-      - curl -O https://cmake.org/files/v3.5/cmake-3.5.1-Linux-x86_64.tar.gz
-      - tar zxvf cmake-3.5.1-Linux-x86_64.tar.gz
-      - sudo cp -rf cmake-3.5.1-Linux-x86_64/* /usr/
 
     - dist: xenial
       compiler: gcc
@@ -103,16 +93,19 @@ jobs:
       os: osx
       osx_image: xcode11
       before_install:
+      script: make all check
 
     - name: macOS, xcode9.4
       os: osx
       osx_image: xcode9.4
       before_install:
+      script: make all check
 
     - name: macOS, xcode7.3
       os: osx
       osx_image: xcode7.3
       before_install:
+      script: make all check
 
     - name: Windows, MinGW
       os: windows
